MNGW-7348 - Modified dashboard and navbar to remove elements from the dom instead of simply hiding them for mobile - Modified mobile view CSS to fix issue with floating footer disappearing when scrolled to the bottom of the page on a mobile device - Fixed issue with side menu being invisible but overlaying the page which disallowed scrolling or clicking at certain points

--- a/app/styles/basic/_base.scss
+++ b/app/styles/basic/_base.scss
@@ -52,7 +52,22 @@ body {
 
 @media only screen and (max-width: 767px) {
     .nxg-main-view {
-        padding-bottom: 0px;
+      padding-bottom: 45px;
+    }
+    #main-container {
+        margin-top: 60px;
+        margin-bottom: 45px;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
+
+        .nxg-main-view {
+            > div {
+                position: fixed;
+                top: 0;
+                bottom: 0;
+            }
+        }
     }
 }
 .nxg-fade {
