--- a/app/styles/common/_footer.scss
+++ b/app/styles/common/_footer.scss
@@ -59,10 +59,3 @@ body {
   top: -7px;
   z-index: 5;
 }
-
-@media only screen and (max-width: 767px) {
-  .nxg-main-container {
-    padding-bottom: 45px;
-  }
-
-}
